[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceruleo"
description = "Remaining useful life estimation utilities"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["predictive maintenance", "remaining useful life"]
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
        "pandas >= 1.5",
        "numpy >= 1.22",
        "tqdm >= 4.56",
        "scikit-learn >= 1.3.2",
        "emd >= 0.4",
        "mmh3   >= 2.0",
        "pyarrow >= 4",
        "gdown >= 4.2",
        "pyinform >= 0.2",
        "pyts >= 0.12",
        "seaborn >= 0.11",
        "antropy >= 0.1.5",
        "uncertainties >= 3.1",
        "PyWavelets >= 1.3",
]


[tool.hatch.version]
path = "ceruleo/__init__.py"


[project.urls]
Homepage = "https://github.com/lucianolorenti/ceruleo"
Documentation = "https://lucianolorenti.github.io/ceruleo/"

[project.optional-dependencies]
tensorflow = ["tensorflow >= 2.5"]

test = [
    "pytest",
    "coverage",
    "xgboost >= 1.5",
    "nbmake>=1.5.0"
]
doc = [
    "mkdocs", 
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
    "notebook<=6.5",
    "jupyter_contrib_nbextensions",
    "mkdocstrings",
    "mkdocs-bibtex",
    "sphinxcontrib.bibtex",
    "mkdocs-matplotlib",
    
]