[metadata]
name = ceruleo
version = 2.0.0
description = Remaining useful life estimation utilities
url = https://medium.com/@gmyrianthous
keywords = predictive maintenance, remaining useful life
[options]
packages =
    ceruleo
python_requires = >=3.
install_requires = 
    pyts
    pandas
    numpy
    tqdm
    scikit-learn
    gwpy
    emd
    dill
    mmh3
    pyarrow
    fastparquet
    gdown
    uncertainties
    pyinform
    pyts
    PyWavelets
    seaborn

[options.extras_require]
test = 
    pytest
    coverage
doc = 
    mkdocs 
    mkdocstrings[python]
    mkdocs-material
    mkdocs-jupyter
    jupyter_contrib_nbextensions
    
